--- a/QR-Code-Component/css/style.css
+++ b/QR-Code-Component/css/style.css
@@ -31,11 +31,8 @@ main {
 }
 
 .card {
-  display: flex;
   background-color: var(--White);
-  justify-content: center;
   border-radius: 14px;
-  flex-direction: column;
   margin: 20px 0 0 0;
 }
 
@@ -47,7 +44,8 @@ main {
 }
 
 .card__qr {
-  border-radius: 14px;
+    border-radius: 14px;
+    width: 90%;
 }
 
 .card__text__wrapper__heading {
